fixed wrapping behavior for smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,24 @@ body {
     padding-left: var(--container-padding); /* Add padding inside the container to indent the text*/
 }
 
+/* If screen width is small make the video display below the project text */
+@media screen and (max-width: 768px) {
+    .project-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .project-text {
+        width: 100%;
+    }
+
+    .project-video {
+        width: 100%;
+        margin-top: 1rem;
+    }
+}
+
 /* Project all text styling */
 .project-text {
     text-align: left;
@@ -378,7 +396,10 @@ body {
 /* Project publication link styling */
 .publication-link-wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
+    gap: 1rem 1rem; /* row-gap column-gap */
+    margin-top: 0.5rem;
 }
 
 /* publication link doi text styling */
@@ -394,7 +415,6 @@ body {
     font-size: 0.8rem;
     color: var(--primary-text-color);
     text-decoration: none;
-    margin-right: 1rem;
 }
 
 /* publication link doi icon styling */
